opam-version: "2.0"
name: "runTimeout"
version: "1.0"
synopsis: "RunTimeout runs function thunks with time limits"
description: """
RunTimeout is used to run a function thunk within a time limit, using OCaml's
Unix timers and signal handling, which only allows this program to be compatible
on Unix-based devices

This program also does not work with multithreading and does not currently
support Dune (see https://github.com/ocaml/dune/issues/4151)

Thanks to Gerd (https://tinyurl.com/yy3wdqxp) for the method of keeping the
original signal handler behavior
"""
maintainer: "Nikunj Chawla <nikchawla312@gmail.com>"
authors: "Nikunj Chawla <nikchawla312@gmail.com>"
homepage: "https://github.com/nik312123/runTimeLimit"
dev-repo: "git+https://github.com/nik312123/runTimeLimit.git"
bug-reports: "https://github.com/nik312123/runTimeLimit/issues"
doc: "https://nik312123.github.io/ocamlLibDocs/runTimeLimit/RunTimeLimit/"
depends: [
    "ocaml" {>= "4.08.1"}
    "dune" {>= "2.7.1"}
    "base-bytes"
    "base-unix"
]
build: [
    ["dune" "build" "-p" name "-j" jobs]
    ["dune" "runtest" "-p" name "-j" jobs] {with-test}
    ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
